--- a/disease-prediction-ml/requirements.txt
+++ b/disease-prediction-ml/requirements.txt
@@ -1,10 +1,15 @@
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
-xgboost
-catboost
-lightgbm
-imbalanced-learn
-jupyter
+# Core dependencies
+numpy==1.23.5
+pandas==1.5.3
+matplotlib==3.7.0
+seaborn==0.12.2
+
+# Machine Learning
+scikit-learn==1.2.2
+xgboost==1.7.5
+catboost==1.2
+lightgbm==3.3.5
+imbalanced-learn==0.10.1
+
+# Development
+jupyter==1.0.0
